@@ -262,12 +262,6 @@ static void io_init(void)
 }
 
 /*==============================================================*/
-#if linux
-#define	HAVE_PHYSMEM_SYSCONF	1	/* XXX hotwired for linux */
-#endif
-#if defined(__APPLE__) && defined(__MACH__)
-#define	HAVE_PHYSMEM_SYSCTL	1	/* XXX hotwired for darwin */
-#endif
 
 #if defined(HAVE_PHYSMEM_SYSCTL) /* HAVE_SYS_SYSCTL_H */
 #include <sys/sysctl.h>
@@ -300,13 +294,6 @@ static rpmuint64_t physmem(void)
 #endif
     return ret;
 }
-
-#if linux
-#define	HAVE_NCPU_SYSCONF	1	/* XXX hotwired for linux */
-#endif
-#if defined(__APPLE__) && defined(__MACH__)
-#define	HAVE_NCPU_SYSCTL	1	/* XXX hotwired for darwin */
-#endif
 
 #if defined(HAVE_NCPU_SYSCTL) /* HAVE_SYS_SYSCTL_H */
 #include <sys/sysctl.h>
